# Falcon

./: .gitignore  README.md  lullaby.mid  lullaby_GI15.mid  lullaby_GI20.mid  lullaby_transposed.mid  pyproject.toml  requirements.txt
falcon/: __main__.py  cli.py  falcon.py  midi.py  punch.py  puncher.py
falcon/boxes/: __init__.py  __init__.pyi  box.py  models.py
legacy/: README.md
legacy/falcon/: falcon.py  main.py  puncher.py  util.py
